<resources>
    <string name="app_name">Quiz Me</string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again?</string>
    <string name="position">Position</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="android_trivia">Quiz Me</string>
    <string name="about_text">Quiz Me will help remind you of important concepts you have learned and will learn in Mathematics.\n\nThese questions will help you to sharp your mathematics skills to participate in International Championship\n\n Happy Playing!\n\n\n</string>
    <string name="rules_text">Select the answer from the options given. Each time you get an answer correct, you advance to the next question. And Each question contains 1 point.\n\nIf you get the answer wrong, 1 point will be deducted from the score! After the whole quiz
        completed You will be provided with the details of the quiz with graph within the game screen, and this will also end your game. \n\n Happy Playing!\n\n\n</string>
    <string name="rules">Rules</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="statistics">Statistics</string>
    <string name="addquestion">Add Question</string>
    <string name="logout">Logout</string>
    <string name="trivia_hint">Quiz Me Hint</string>
    <string name="title_android_trivia_question">Quiz Me (%1$d/%2$d)</string>
    <string name="title_about_trivia">About Quiz Me</string>
    <string name="title_trivia_rules">Quiz Me Rules</string>
    <string name="share_success_text">I have scored %1$d/%2$d correct questions in Quiz Me App! You have to try this amazing app.</string>
    <string name="submit_button">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="question_category_array">
        <item>Select a Category</item>
        <item>Number – number and place value</item>
        <item>Number – addition and subtraction</item>
        <item>Number – multiplication and division</item>
        <item>Number – fractions</item>
        <item>Measurement</item>
        <item>Geometry – properties of shapes</item>
        <item>Geometry – position and direction</item>
    </string-array>
</resources>