<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/rulesFragment"
        android:icon="@drawable/rules"
        android:title="@string/rules" />
    <item
        android:id="@+id/statisticsFragment"
        android:icon="@drawable/ic_statistics"
        android:title="@string/statistics" />
    <item
        android:id="@+id/addNewQuestionFragment"
        android:icon="@drawable/ic_add_question"
        android:title="@string/addquestion" />
    <item
        android:id="@+id/aboutFragment"
        android:icon="@drawable/ic_about"
        android:title="@string/about" />
    <item
        android:id="@+id/loginActivity"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />

</menu>