<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    android:label="@string/title_about_trivia"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/gameFragment"
        android:name="com.quiz.quizme.student.GameFragment"
        tools:layout="@layout/fragment_game">
        <action
            android:id="@+id/action_gameFragment_to_gameWonFragment"
            app:destination="@id/gameWonFragment"
            app:popUpTo="@id/gameFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/gameWonFragment"
        android:name="com.quiz.quizme.student.GameFinishFragment"
        android:label="@string/congratulations"
        tools:layout="@layout/fragment_game_finish">
        <action
            android:id="@+id/action_gameWonFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:popUpTo="@id/homeFragment" />
        <argument
            android:name="numQuestions"
            app:argType="integer" />
        <argument
            android:name="numCorrect"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.quiz.quizme.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about"/>
    <fragment
        android:id="@+id/rulesFragment"
        android:name="com.quiz.quizme.RulesFragment"
        android:label="Rules"
        tools:layout="@layout/fragment_rules" />
    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.quiz.quizme.student.StatisticsFragment"
        android:label="Statistics"
        tools:layout="@layout/fragment_statistics" />
    <fragment
        android:id="@+id/addNewQuestionFragment"
        android:name="com.quiz.quizme.admin.AddNewQuestionFragment"
        android:label="Add New Question"
        tools:layout="@layout/fragment_add_new_question" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.quiz.quizme.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home_admin" >
        <action
            android:id="@+id/action_homeFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />
        <action
            android:id="@+id/action_homeFragment_to_editQuestionFragment"
            app:destination="@id/editQuestionFragment" />
    </fragment>
    <fragment
        android:id="@+id/editQuestionFragment"
        android:name="com.quiz.quizme.admin.EditQuestionFragment"
        android:label="Edit Question" >
        <argument
            android:name="questionID"
            app:argType="integer" />
    </fragment>
</navigation>